Unify streams to directly publish VacationType created and updated events